fixed hero image not showing

--- a/frontend/src/styles/Hero.css
+++ b/frontend/src/styles/Hero.css
@@ -8,7 +8,7 @@
 
 .hero:before {
     content: '';
-    background: url('./images/bg.jpg') no-repeat center center/cover;
+    background: url('../images/bg.jpg') no-repeat center center/cover;
     height: 100%;
     width: 100%;
     position: absolute;
